--- a/index.html
+++ b/index.html
@@ -1,16 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
   <meta charset="UTF-8" />
-  <title>Page Title</title>
+  <title>Rubik's Cube Tutorial</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <link rel="stylesheet" href="" />
-  <style></style>
-  <script src=""></script>
+  <link rel="stylesheet" href="styles.css" />
 
   <!--- Code above this line will not be displayed on the browser -->
 
   <body>
-    <p>Hello world!</p>
+    <h1>3x3 Rubik's Cube Tutorial</h1>
+    <h3 style="font-size: 24px; color: gray">Stages of beginner's method</h3>
+    <nav>
+      <a style="font-size: 20px" href="index.html">Home</a>
+      <a href="cross/cross.html">Cross</a>
+      <a href="firstlayer/firstlayer.html">First Layer</a>
+      <a href="secondlayer/secondlayer.html">Second Layer</a>
+      <a href="oll/oll.html">OLL</a>
+      <a href="pll/pll.html">PLL</a>
+    </nav>
+    <p><strong>Self Introduction:</strong></p>
     <p>My name is Min Park</p>
+    <p>
+      Hi, my name is Min Park and as of 2025 I am currently a sophomore
+      attending University of Wisconsin-Madison. Since 2015, one of my prominent
+      hobbies has been
+      <span style="font-weight: bolder; text-decoration: underline"
+        >speedcubing</span
+      >.
+      <span style="font-weight: bolder; text-decoration: underline"
+        >Speedcubing</span
+      >
+      refers to a practice of solving rubik’s cube as quick as possible; you may
+      have seen from youtube videos of some people solving 3x3 cubes in as fast
+      as 3 seconds, and in fact, the current WR of 3.08 seconds have been set
+      this very month (February 2025).
+      <span style="font-weight: bolder; text-decoration: underline"
+        >Speedcubing</span
+      >
+      is widely recognized as a respectable hobby sport, and official
+      competitions are held at regular intervals throughout the world. While I’m
+      nowhere near countless other better speedcubers than me out there, I still
+      do consider myself as an adept one. For reference, my current personal
+      best is 8 seconds, and I normally average around 12 seconds. Now, if you
+      happen to be no speedcuber - and ever had sought solving the standard 3x3
+      Rubik’s cube by yourself for the first time, you are in the right place.
+      While there are numerous methods for solving 3x3 cubes out there, the
+      current most popular method is the
+      <span style="text-decoration: underline">CFOP method</span>
+      developed around 1981(which is also the one I use). In this website, I
+      plan to walk you through the beginner version of the CFOP method in terms
+      of learning, and efficiency. While the actual CFOP method is naturally far
+      more complex, learning this beginner’s version should easily pave you the
+      way to advancing towards the real version, and above all, give you the
+      satisfaction of solving your first cube. The tutorials will mainly consist
+      of an image showing the ultimate goal of a specific step in the method,
+      and a following video explaining how. I’m certainly not the most eloquent
+      tutor, but I hope I will have delivered enough information and intuition
+      for you to understand in one go. In a nutshell,
+      <span style="font-weight: bolder; text-decoration: underline"
+        >speedcubing</span
+      >
+      is no magic - it is really nothing but a train of thought involving
+      <span style="font-style: italic"
+        >memorizations of algorithms and pattern recognition.</span
+      >
+      So, if you are still at all interested in this, be an aspiring learner,
+      and let us begin by clicking the first link that introduces you to the
+      most fundamental step of this method : Cross.
+    </p>
   </body>
 </html>
